Removed unused HTML class.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -1,4 +1,4 @@
-<div class="container-fluid note-editor" ng-class="note.trans.deleted && 'container-disabled'"
+<div class="container-fluid" ng-class="note.trans.deleted && 'container-disabled'"
   ng-controller="NoteEditorController">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
