--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -4,22 +4,20 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top height-large--bottom" swiper-prevent>
 
-        <a href ng-hide="isPickerOpen()"
+        <a href ng-show="showTaskAction('saveBack')"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endTaskEdit()">
-          <span class="text-navigation-back"
-            ng-class="getEditorNavigationBackClasses()"
+          <span class="text-navigation-back" ng-class="getEditorNavigationBackClasses()"
             ng-bind="isTaskEdited() && !task.trans.deleted ? 'save' : 'back'">
           </span>
         </a>
 
-        <a href ng-if="isPickerOpen()" ng-click="propertyEditDone()" class="group-symmetrical--left highlighted"
-          editable-field-container="auto">
+        <a href ng-if="showTaskAction('saveDone')" class="group-symmetrical--left highlighted"
+          editable-field-container="auto" ng-click="subEditorDone()">
           <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
 
-        <div ng-show="isTaskPropertyInEdit() || !isFirstSlide('taskEditor')"
-          ng-style="{maxWidth: calculateTitleWidth()}"
+        <div ng-show="showTaskEditorComponent('titlebarTitle')" ng-style="{maxWidth: calculateTitleWidth()}"
           class="group-symmetrical--middle width-large text-heading-primary--outer primary">
           <div class="text-heading-primary--inner">
             <span class="text-heading-primary" ng-class="!task.trans.title && 'text-downplayed'"
@@ -28,24 +26,23 @@
           </div>
         </div>
 
-        <div ng-if="showEditorType" class="group-symmetrical--middle group-centered substitute">
+        <div ng-if="showTaskEditorComponent('editorType')"
+          class="group-symmetrical--middle group-centered substitute">
           <span class="text-heading-primary text-downplayed">task</span>
         </div>
 
-        <a href ng-if="!task.trans.deleted" ng-hide="isTaskPropertyInEdit()" class="group-symmetrical--right"
+        <a href ng-if="showTaskAction('delete')" class="group-symmetrical--right"
           swiper-click="deleteTaskInEdit()">
           <span class="icon-trash"></span>
         </a>
-        <a href ng-if="task.trans.deleted" ng-hide="isTaskPropertyInEdit()"
+        <a href ng-if="showTaskAction('restore')"
           class="group-symmetrical--right link-navigation highlighted active" swiper-click="undeleteTask(task)">
           <span class="text-navigation">restore</span>
         </a>
 
-        <div ng-if="isTaskPropertyInEdit()" class="group-symmetrical--right">
-          <span ng-if="isPickerOpen()" class="text-field--label-bold" ng-bind="getTaskPropertyNameInEdit()">
-          </span>
-          <div ng-if="taskDescriptionFocused" class="text-field--label-wrapper">
-            <span ng-bind="'descrip' + (columns === 1 ? '-\n' : '') + 'tion'" class="text-field--label-bold"></span>
+        <div ng-if="showTaskEditorComponent('propertyNameInEdit')" class="group-symmetrical--right">
+          <div class="text-field--label-wrapper">
+            <span class="text-field--label-bold" ng-bind="getTaskPropertyNameInEdit()"></span>
           </div>
         </div>
 
@@ -62,25 +59,25 @@
         <div class="container-content" drawer-override-aisle="right" ng-init="drawerAisleInitialized = true">
 
           <!-- TASK TITLE -->
-          <form role="form" ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen || reminderPickerOpen"
-            class="group-mixed" autocapitalize="none" autocorrect="off">
+          <form role="form" ng-show="showTaskProperty('title')" class="group-mixed"
+            autocapitalize="none" autocorrect="off">
             <div class="group-mixed--left">
-              <input type="checkbox" swiper-click="clickCompleteTaskInEdit()" ng-model="task.trans.optimisticComplete"
-                ng-model-options="{getterSetter: true}" icon-checkbox="editorTitlebarCheckbox" />
+              <input type="checkbox" swiper-click="clickCompleteTaskInEdit()"
+                ng-model="task.trans.optimisticComplete" ng-model-options="{getterSetter: true}"
+                icon-checkbox="editorTitlebarCheckbox" />
             </div>
             <div class="group-mixed--middle">
               <textarea ng-model="task.trans.title" input-model-validator ng-trim="false"
                 ng-keydown="taskTitlebarTextKeyDown($event)"
                 editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
-                editable-field-focus="setTitleBarFocus()" msd-elastic placeholder="enter task title&#8230;"
-                maxlength="128">
+                editable-field-focus="setTitleBarFocus()" msd-elastic
+                placeholder="enter task title&#8230;" maxlength="128">
               </textarea>
             </div>
           </form>
 
           <!-- DATE -->
-          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen || reminderPickerOpen"
-            class="group-mixed">
+          <div ng-show="showTaskProperty('date')" class="group-mixed">
             <a href class="group-mixed--middle link-search-result" ng-class="!task.trans.due && 'downplayed'"
               swiper-click="openCalendar()">
               <span class="text-field--title"
@@ -93,8 +90,9 @@
           </div>
 
           <!-- CALENDAR -->
-          <div ng-if="calendarOpen" class="swiper-no-swiping animate-fade-in row-top-parent" editable-field-container="auto"
-            editable-field-container-clicked-elsewhere="closeCalendar()" data-snap-ignore="true">
+          <div ng-if="showTaskSubEditor('calendar')" class="swiper-no-swiping animate-fade-in row-top-parent"
+            editable-field-container="auto" editable-field-container-clicked-elsewhere="closeCalendar()"
+            data-snap-ignore="true">
 
             <div ng-if="task.trans.due" class="group-mixed vertically-centered">
               <a href class="group-mixed--middle link-search-result">
@@ -117,8 +115,7 @@
           </div>
 
           <!-- REMINDERS -->
-          <div ng-if="isRemindersVisible(task)"
-            ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen || reminderPickerOpen">
+          <div ng-if="showTaskProperty('reminders')">
 
             <div ng-if="isRemindersSupported() &&
               (!task.trans.reminders || !findActiveReminderForThisDevice(task.trans.reminders))"
@@ -151,7 +148,7 @@
           </div>
 
           <!-- REMINDER PICKER -->
-          <div ng-if="reminderPickerOpen"
+          <div ng-if="showTaskSubEditor('reminders')"
             class="swiper-no-swiping animate-fade-in group-mixed vertically-centered"
             editable-field-container="auto" data-snap-ignore="true">
 
@@ -237,9 +234,7 @@
           </div>
 
           <!-- LIST -->
-          <div ng-hide="calendarOpen || taskDescriptionFocused || listPickerOpen || reminderPickerOpen ||
-                        features.lists.getStatus('active') === 'disabled'"
-            class="group-mixed">
+          <div ng-show="showTaskProperty('list')" class="group-mixed">
             <a href class="group-mixed--middle link-search-result" ng-class="!task.trans.list && 'downplayed'"
               swiper-click="openListPicker()">
               <span class="text-field--title"
@@ -252,7 +247,8 @@
           </div>
 
           <!-- LIST PICKER -->
-          <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto"
+          <div ng-if="showTaskSubEditor('list')" class="swiper-no-swiping animate-fade-in"
+            editable-field-container="auto"
             editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
             <div list-picker="{upperHeading: 'active lists', upperArray: getListsArray('active'),
@@ -262,18 +258,18 @@
               list-picker-save="closeListPickerAndSetListToItem(task, list)"
               list-picker-clear="closeListPickerAndClearListFromItem(task, list)"
               list-picker-get-selected="task.trans.list"
-              list-picker-register-save-new-list-callback="registerPropertyEditDoneCallback(saveNewList)"
-              list-picker-unregister-save-new-list-callback="unregisterPropertyEditDoneCallback()"
-              list-picker-register-is-edited-callback="registerIsPropertyEdited(isEdited)"
-              list-picker-unregister-is-edited-callback="unregisterIsPropertyEdited()">
+              list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
+              list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
+              list-picker-register-is-edited-callback="registerHasSubEditorEditedCallback(isEdited)"
+              list-picker-unregister-is-edited-callback="unregisterHasSubEditorEditedCallback()">
             </div>
           </div>
 
           <!-- DESCRIPTION -->
-          <textarea ng-if="drawerAisleInitialized"
-            ng-hide="calendarOpen || listPickerOpen || reminderPickerOpen" id="ignoreSnap"
+          <textarea ng-if="drawerAisleInitialized && showTaskProperty('description')" id="ignoreSnap"
             ng-model="task.trans.description" input-model-validator ng-trim="false"
-            ng-focus="setTaskDescriptionFocus(true)" ng-blur="setTaskDescriptionFocus(false)" msd-elastic
+            ng-focus="setTextPropertyFocus('description', true)"
+            ng-blur="setTextPropertyFocus('description', false)" msd-elastic
             placeholder="enter description&#8230;" maxlength="1024" autocapitalize="none" autocorrect="off">
           </textarea>
 
@@ -287,8 +283,9 @@
                 <span class="icon-calendar"></span>
               </a>
             </div>
-            <a href swiper-click="swipeToAdvanced('taskEditor')" ng-hide="isFooterNavigationHidden()"
-              class="group-symmetrical--right link-navigation animate-fade-in-out">
+            <a href ng-if="showTaskEditorComponent('basicFooter', 'navigation')"
+              class="group-symmetrical--right link-navigation animate-fade-in-out"
+              swiper-click="swipeToAdvanced('taskEditor')">
               <span class="text-navigation-forward">advanced</span>
             </a>
           </nav>
@@ -301,9 +298,7 @@
         <div class="container-content" ng-style="{'padding-bottom': advancedSlideInfo.footerHeight}">
 
           <!-- CONTEXT -->
-          <div ng-hide="contextPickerOpen || repeatingPickerOpen || urlFocused ||
-                       (features.tasks.getStatus('contexts') === 'disabled')"
-            class="group-mixed row-top-parent">
+          <div ng-show="showTaskProperty('context')" class="group-mixed row-top-parent">
             <a href class="group-mixed--middle link-search-result"
               ng-class="!task.trans.context && 'downplayed'" swiper-click="openContextPicker()">
               <span class="text-field--title"
@@ -316,24 +311,24 @@
           </div>
 
           <!-- CONTEXT PICKER -->
-          <div ng-if="contextPickerOpen" class="swiper-no-swiping animate-fade-in"
+          <div ng-if="showTaskSubEditor('context')" class="swiper-no-swiping animate-fade-in"
             editable-field-container="auto" editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeContextPicker()" data-snap-ignore="true">
-            <div list-picker="getTagsArray('contexts', {owner: task.trans.owner})" list-picker-new-item="getNewContext()"
+            <div list-picker="getTagsArray('contexts', {owner: task.trans.owner})"
+              list-picker-new-item="getNewContext()"
               list-picker-save="closeContextPickerAndSetContextToTask(task, list)"
               list-picker-clear="closeContextPickerAndClearContextFromTask(task, list)"
               list-picker-get-selected="task.trans.context" list-picker-type="context"
               list-picker-prefix="@"
-              list-picker-register-save-new-list-callback="registerPropertyEditDoneCallback(saveNewList)"
-              list-picker-unregister-save-new-list-callback="unregisterPropertyEditDoneCallback()"
-              list-picker-register-is-edited-callback="registerIsPropertyEdited(isEdited)"
-              list-picker-unregister-is-edited-callback="unregisterIsPropertyEdited()">
+              list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
+              list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
+              list-picker-register-is-edited-callback="registerHasSubEditorEditedCallback(isEdited)"
+              list-picker-unregister-is-edited-callback="unregisterHasSubEditorEditedCallback()">
             </div>
           </div>
 
           <!-- REPEATING -->
-          <div ng-if="task.trans.due" ng-hide="contextPickerOpen || repeatingPickerOpen || urlFocused"
-            class="group-mixed">
+          <div ng-if="showTaskProperty('repeating')" class="group-mixed">
             <a href class="group-mixed--middle link-search-result"
               ng-class="!task.trans.repeating && 'downplayed'" swiper-click="openRepeatingPicker()">
               <span class="text-field--title"
@@ -346,40 +341,36 @@
           </div>
 
           <!-- REPEATING PICKER -->
-          <div ng-if="repeatingPickerOpen" class="swiper-no-swiping animate-fade-in"
+          <div ng-if="showTaskSubEditor('repeating')" class="swiper-no-swiping animate-fade-in"
             editable-field-container="auto" editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeRepeatingPicker()" data-snap-ignore="true">
             <div list-picker="repeatTypes"
               list-picker-save="closeRepeatingPickerAndSetRepeatTypeToTask(task, list)"
-              list-picker-clear="closeRepeatingPickerAndClearRepeatTypeFromtask(task, list)"
+              list-picker-clear="closeRepeatingPickerAndClearRepeatTypeFromTask(task, list)"
               list-picker-get-selected="task.trans.repeating ? {trans: {title: task.trans.repeating}} : undefined"
-              list-picker-type="repeating"></div>
+              list-picker-type="repeating">
+            </div>
           </div>
 
-          <div ng-hide="contextPickerOpen || repeatingPickerOpen"
-            class="row-vertically-centered with-textarea">
-            <textarea ng-model="task.trans.link" input-model-validator ng-trim="false"
-              ng-focus="setUrlFocus(true)" ng-blur="setUrlFocus(false)" msd-elastic maxlength="2000"
-              placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
-            </textarea>
-          </div>
+          <textarea ng-show="showTaskProperty('url')" id="ignoreSnap" class="text-metadata"
+            ng-model="task.trans.link" input-model-validator ng-trim="false"
+            ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
+            msd-elastic
+            maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+          </textarea>
 
         </div>
         <footer ng-hide="isTaskFooterHidden(editorFooterHiddenCallback)"
           class="container-content--after editor-footer" editor-footer="advancedSlideInfo">
 
           <!-- CONVERT -->
-          <div class="group-symmetrical"
-            ng-class="(features.notes.getStatus() === 'disabled' &&
-            features.lists.getStatus('active') === 'disabled') && 'invisible'">
+          <div class="group-symmetrical" ng-if="showTaskEditorComponent('advancedFooter', 'convert')">
             <a href class="group-symmetrical--left link"
-              ng-class="(features.notes.getStatus() === 'disabled') && 'invisible'"
-              swiper-click="convertToNote(task)">
+              ng-class="!showTaskAction('convertToNote') && 'invisible'" swiper-click="convertToNote(task)">
               <span class="text-convert small">note</span>
             </a>
             <a href class="group-symmetrical--middle group-centered link"
-              ng-class="(features.lists.getStatus('active') === 'disabled') && 'invisible'"
-              swiper-click="convertToList(task)">
+              ng-class="!showTaskAction('convertToList') && 'invisible'" swiper-click="convertToList(task)">
               <span class="text-convert small">list</span>
             </a>
             <div class="group-symmetrical--right">
@@ -388,8 +379,8 @@
           </div>
 
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href ng-hide="isFooterNavigationHidden()" swiper-click="swipeToBasic('taskEditor')"
-              class="group-symmetrical--left link-navigation">
+            <a href ng-if="showTaskEditorComponent('advancedFooter', 'navigation')"
+              class="group-symmetrical--left link-navigation" swiper-click="swipeToBasic('taskEditor')">
               <span class="text-navigation-back">basic</span>
             </a>
           </nav>
