Refactored showing property label when they are in edit in list and note editor.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -42,7 +42,7 @@
           <span class="text-navigation">restore</span>
         </a>
 
-        <div ng-if="showEditorProperty()" class="group-symmetrical--right">
+        <div ng-if="showEditorComponent('label')" class="group-symmetrical--right">
           <div class="text-field--label-wrapper">
             <span class="text-field--label-bold"
               ng-bind="getListPropertyNameInEdit()">
