--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -43,7 +43,7 @@
           <span class="text-navigation">restore</span>
         </a>
 
-        <div ng-if="showNoteProperty()" class="group-symmetrical--right">
+        <div ng-if="showEditorComponent('label')" class="group-symmetrical--right">
           <div class="text-field--label-wrapper">
             <span class="text-field--label-bold" ng-bind="getNotePropertyNameInEdit()"></span>
           </div>
