--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -33,7 +33,7 @@
           swiper-click="undeleteItem(item)"><span class="text-navigation">restore</span>
         </a>
 
-        <div ng-if="showEditorProperty()" class="group-symmetrical--right">
+        <div ng-if="showEditorComponent('label')" class="group-symmetrical--right">
           <div class="text-field--label-wrapper">
             <span class="text-field--label-bold"
               ng-bind="getPropertyNameInEdit()">
